--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -244,4 +244,7 @@
     <!-- Miwok translation for phrase "Come here." -->
     <string name="miwok_phrase_come_here">әnni\'nem</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
